# mcp_playground

./: .env.cloud.example  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  app.py  app_fastmcp.py  app_fastmcp_subprocess.py  app_subprocess.py  chat_interface.py  cloud_server.py  launch_chat.py  main.py  mcp_server.py  ollama_client.py  pyproject.toml  test_documents.py  test_enhanced_rag.py  test_list_saved.py  test_mcp.py  test_semantic_rag.py  test_simplified_documents.py  tools.py  ui_config.py  web_search_server.py  windsurf_mcp.sh
.streamlit/: config.toml
cache/2025-07-01/: AAPL.json  AAPL_HISTORY.json  BTC_CRYPTO.json  DIA_MARKET.json  GOOGL.json  IWM_MARKET.json  MSFT.json  QQQ_MARKET.json  SPY_MARKET.json  TSLA.json  TSLA_HISTORY.json
data/: conversations.db
docs/: DOCUMENT_MANAGEMENT_SYSTEM.md  FASTMCP_OVERVIEW.md  MCP_CLIENT_RENDERING.md  MEMORY_REDESIGN_PLAN.md  MEMORY_SYSTEM.md  MEMORY_SYSTEM_COMPLETE.md  RAG_ARCHITECTURE.md
examples/: financial_with_retry.py
src/: __init__.py  server.py
src/core/: MEMORY_README.md  __init__.py  cache.py  mcp_output.py  memory.py  models.py  retry_manager.py  retry_state_manager.py  tool_wrapper.py  unified_cache.py  utils.py  vector_memory.py
src/tools/: __init__.py  arxiv.py  crime.py  documents.py  financial.py  memory.py  retry_examples.py  statscan.py  tides.py  weather.py  web.py  youtube.py
static/: main.js  style.css
tests/: test_retry_system.py
