[project]
name = "mcp-playground"
version = "1.0.0"
description = "Minimal Streamlit chat playground with Ollama and function calling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.46.1",
    "requests>=2.32.4",
    "duckduckgo-search>=6.1.0",
    "httpx>=0.27.0",
    "arxiv>=2.1.0",
    "PyMuPDF>=1.23.0",
    "pydantic>=2.0.0",
    "ollama>=0.3.0",
    "python-dotenv>=1.0.0",
    "youtube-transcript-api>=0.6.0",
    "tinydb>=4.8.0",
    "fastmcp>=2.10.1",
]
