[project]
name = "mcp-playground"
version = "1.0.0"
description = "Minimal Streamlit chat playground with Ollama and function calling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.46.1",
    "requests>=2.32.4",
    "httpx>=0.27.0",
    "arxiv>=2.1.0",
    "PyMuPDF>=1.23.0",
    "pydantic>=2.0.0",
    "ollama>=0.3.0",
    "python-dotenv>=1.0.0",
    "youtube-transcript-api>=0.6.0",
    "tinydb>=4.8.0",
    "fastmcp>=2.10.1",
    "chromadb>=0.4.0",
    "python-dateutil>=2.8.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "seaborn>=0.12.0",
    "ddgs>=9.0.1",
    "beautifulsoup4>=4.12.0",
    "html2text>=2020.1.16",
]
